--- a/test/scss_test.html
+++ b/test/scss_test.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" href="/css/test.css">
 
-  <title>Live Sass Ccompiler Setting</title>
+  <title>Live Sass Compiler Setting</title>
 </head>
 <body>
 
