--- a/test/scss_tip.html
+++ b/test/scss_tip.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
 
-  <link rel="stylesheet" href="/css/tip.css">
+  <link rel="stylesheet" href="tip.css">
 
   <title>Live Sass Compiler 세팅에서 map파일과 Vendor Prefixes 생성하지 않기</title>
 </head>
 <body>
-  <h1>Live Sass Compiler 세팅에서 map파일과 Vendor Prefixes 생성하지 않기</h1> 
+  <h1>Live Sass Compiler 세팅에서 map파일과 Vendor Prefixes <span>생성하지 않기</span></h1> 
 </body>
 </html>
