--- a/EssentialTheory/mixin, include/index.html
+++ b/EssentialTheory/mixin, include/index.html
@@ -11,9 +11,13 @@
   <h1 class="heading">
     codingworks <span>publishing</span> class
   </h1>
-
   <h1 class="news_headline">
     nesw <span>headline</span> broadcast
   </h1>
+
+  <div class="buttons">
+    <button class="approval">승인</button>
+    <button class="refuse">거절</button>
+  </div>
 </body>
 </html>
