--- a/Examples of using/loginform/loginform.html
+++ b/Examples of using/loginform/loginform.html
@@ -5,7 +5,7 @@
 
   <link rel="stylesheet" href="loginform.css">
 
-  <title>Document</title>
+  <title>loginform</title>
 </head>
 <body>
   <!-- 로그인폼 디자인(속성선택자, 구글 폰트 아이콘) -->
